Fixing Distorted SMS Tester pop-up. (mingle #1147) <herihaja>

--- a/datawinners/media/css/scss/section_questionnaire.scss
+++ b/datawinners/media/css/scss/section_questionnaire.scss
@@ -16,7 +16,7 @@
     margin-bottom:10px;
 }
 
-.mobile{
+#question-detail-panel .mobile{
     background:url("/media/images/mobile1.jpg") no-repeat left top;
     height:400px;
     width:295px;
